--- a/index.css
+++ b/index.css
@@ -1,13 +1,19 @@
-* { box-sizing: border-box; }
-html { height: 100%; }
+* {
+	box-sizing: border-box;
+}
+
+html {
+	height: 100%;
+
+}
 
 body {
-  font-family: 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, Helvetica,
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-	background-color: cyan;
+	font-family: 'Roboto', 'Oxygen',
+	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, Helvetica,
+	sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: cyan;
+	background-color: rgba(125, 242, 247, .5);
 	height: 100%;
 	margin: 0;
 }
@@ -19,28 +25,34 @@ span {
 
 .container {
 	display: flex;
-  	justify-content: center;
+	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 100%;
 }
 
 .chat {
-	height: 300px;
+	height: 500px;
 	width: 50vw;
 	display: flex;
 	flex-direction: column;
-  	justify-content: center;
+	justify-content: center;
 	align-items: center;
-} 
+}
 
-::-webkit-input-placeholder { color: .711 ; }
- 
-input { 
-	border: 0; 
-	padding: 15px; 
+::-webkit-input-placeholder {
+	color: .711
+}
+
+input {
+	border: 0;
+	padding: 15px;
 	margin-left: auto;
-	border-radius: 10px; 
+	border-radius: 10px;
+}
+
+button {
+	margin-left: auto;
 }
 
 .messages {
@@ -55,15 +67,35 @@ input {
 	border-radius: 10px;
 }
 
-#bot { margin-left: auto; }
+#bot {
+	margin-left: auto;
+}
 
 .bot {
-	font-family: Consolas, 'Courier New', Menlo, source-code-pro, Monaco,  
+	font-family: Consolas, 'Courier New', Menlo, source-code-pro, Monaco,
 	monospace;
+}
+
+.avatar {
+	height: 25px;
 }
 
 .response {
 	display: flex;
 	align-items: center;
 	margin: 1%;
+}
+
+
+/* Mobile */
+
+@media only screen and (max-width: 980px) {
+	.container {
+		flex-direction: column;
+		justify-content: flex-start;
+	}
+	.chat {
+		width: 75vw;
+		margin: 10vw;
+	}
 }
